test/litest.c
@@ -418,6 +418,7 @@ extern struct litest_test_device litest_gpio_keys_device;
 extern struct litest_test_device litest_ignored_mouse_device;
 extern struct litest_test_device litest_wacom_mobilestudio_13hdt_pad_device;
 extern struct litest_test_device litest_thinkpad_extrabuttons_device;
+extern struct litest_test_device litest_uclogic_tablet_device;
 
 struct litest_test_device* devices[] = {
 	&litest_synaptics_clickpad_device,
@@ -487,6 +488,7 @@ struct litest_test_device* devices[] = {
 	&litest_ignored_mouse_device,
 	&litest_wacom_mobilestudio_13hdt_pad_device,
 	&litest_thinkpad_extrabuttons_device,
+	&litest_uclogic_tablet_device,
 	NULL,
 };
 
